FIXED: improve XHTML compliance FIXED: changed CSS style to remove text shift for missing dependency CHANGED: removed commented-out HTML code

--- a/modules/trunk/core/addons/modules/addons_avalaibles/themes/default/css/style.css
+++ b/modules/trunk/core/addons/modules/addons_avalaibles/themes/default/css/style.css
@@ -17,9 +17,9 @@
 }
 
 .text_alert {
-    position: relative;
-    top: 0px;
-    left: 268px;
+    color:#FF0000;
+    font-weight:bold;
+    font-size:12px;
 }
 
 .text_downloading {
